# set-ruc-portal

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  db_helper.js  docker-compose.yml  download_builder.js  package.json  server.js
.github/workflows/: main.yml  v2.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  db.db  gen-licenses.sh  run.sh
api/src/: db.rs  main.rs
client/: Dockerfile  index.html  nginx.conf  package.json
client/public/: index.html
client/src/: About.js  App.css  App.js  Config.js  License.css  License.js  index.js
client/src/download/: Download.css  Download.js
client/src/search/: Search.css  Search.js
client/src/util/: EmbeddedGist.js  pure.css
client/src/validator/: DigitGenerator.js  Validator.css  Validator.js
downloader/: .dockerignore  .gitignore  Cargo.toml  README.md  clean.sh  gen-licenses.sh  import_data.sql  run.sh
downloader/src/: downloader.rs  joiner.rs  main.rs  scraper.rs
server/: Dockerfile  db_helper.js  download_builder.js  entrypoint.sh  import_data.sql  package.json  server.js  set_parser.js
server/src/: db_helper.js  index.html  index.js  server.js
server/src/lib/: DBHelper.js  DBHelper.spec.js  index.js
server/src/utils/: download_builder.js
v2/api/: Cargo.toml  docker-run.sh
v2/api/src/: db.rs  main.rs
v2/downloader/: .gitignore  Cargo.toml  clean.sh
v2/downloader/src/: joiner.rs  main.rs  scraper.rs
v2/web/: package.json  run.sh
www/: package-lock.json  package.json  tailwind.config.js
www/src/: app.html
www/static/: styles.css
(+15 files in other folders)
