[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rusqlite = { version = "0.30.0" }
serde = "1.0.193"
serde_derive = "1.0.193"
