[package]
name = "ruc_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = "0.11.22"
select = "0.6.0"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.5.0"
